Adding all these files.

--- a/blog-application/src/main/resources/templates/view.html
+++ b/blog-application/src/main/resources/templates/view.html
@@ -10,8 +10,8 @@
 	<body>
 	<section>
 	<nav class="navbar">
-	<div class=	"navdiv"	>
-	<div class="logo"><a href="#">Blog Application</a> </div>
+	<div class=	"navdiv">
+		<div class="logo"><a href="#">Blog Application</a> </div>
 		<ul>
 			<li> <a href="home">Home</a> </li>
 			<li> <a href="createblog">Create Blog</a> </li>
@@ -19,9 +19,9 @@
 			<li> <a href="#">Logout</a> </li>
 		</ul>
 	</div>
-	</div></nav>
+	</nav>
 	
-	<h1> hello wlcm to my blog website</h1>
+	<h1> hello welcome to my blog website</h1>
 	</section>
 	</body>
 	</html>
