--- a/blog-application/src/main/resources/templates/home.html
+++ b/blog-application/src/main/resources/templates/home.html
@@ -1,28 +1,15 @@
 	<!DOCTYPE html>
-	<html  lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="Layout(content)">
+	<html lang="en" xmlns:th="http://www.thymeleaf.org" 
+th:replace="base::Layout(~{::section})">
 	<head>
 	    <meta charset="UTF-8">
 	    <title>My Blog App</title>
 	   <link rel="stylesheet" href="/css/home.css">
-	   
 	  
 	</head>
 	<body>
 	<section class="banner">
-	<nav class="navbar">
-	<div class=	"navdiv"	>
-	<div class="logo"><a href="#">Blog Application</a> </div>
-		<ul>
-			<li> <a th:href="@{/}">Home</a> </li>
-			<li> <a th:href="@{/view}">view Blog</a> </li>
-			<li> <a th:href="@{/signin}">Signin</a> </li>
-			<li> <a th:href="@{/login}">Login</a> </li>
-			<li> <a th:href="@{/}">Logout</a> </li>
-		</ul>
-	</div></nav>
-	<div th:replace="${content}"></div>
-	
-	<h1> hello wlcm to my blog website</h1>
+		<h1> hello wlcm to my blog website</h1>
 	</section>
 	</body>
 	</html>
