--- a/blog-application/src/main/resources/templates/home.html
+++ b/blog-application/src/main/resources/templates/home.html
@@ -10,6 +10,7 @@ th:replace="base::Layout(~{::section})">
 	<body>
 	<section class="banner">
 		<h1> hello wlcm to my blog website</h1>
+		<h1> hello i am arti pawar</h1>
 	</section>
 	</body>
 	</html>
